Creo que hay cosas de sop, iso, fisica2 (van Der Graaf), y lo ultimo que agregue es una guia de funcional y el tp de funcional de pp

--- a/apuntes/fisica2/electrostatica/bibliografia.bib
+++ b/apuntes/fisica2/electrostatica/bibliografia.bib
@@ -5,3 +5,36 @@
   edition = {12},
   publisher = {Pearson Educación}
 }
+
+@book{griffiths,
+  author = {Griffiths, David J.},
+  title = {Introduction to Electrodynamics},
+  year = {2017},
+  edition = {4},
+  publisher = {Cambridge University Press}
+}
+
+@online{lib-electrostatica,
+  author = {Thomas J. Duck},
+  title = {electrostatics},
+  year = {2021},
+  url = {https://github.com/tomduck/electrostatics.git},
+}
+
+
+@online{borrar,
+  author    = {{Universidad del País Vasco}},
+  title     = {Generador de Van de Graaff},
+  year      = {n.d.},
+  url       = {http://www.sc.ehu.es/sbweb/fisica/elecmagnet/campo_electrico/graaf/graaf.htm},
+  note      = {Accedido el 2 de agosto de 2025}
+}
+
+@online{borrar2,
+  author    = {{Universidad de Valencia}},
+  title     = {Generador de Van de Graaff},
+  year      = {n.d.},
+  url       = {https://www.uv.es/uvweb/fisica/es/catalogo-demos/electromagnetismo/generador-van-graaff-1286053998309/DemoExp.html?id=1286111071871},
+  note      = {Accedido el 2 de agosto de 2025}
+}
+
